Version 0.7.2  
  * initial support for virtual containers
  * initial UPnP Search support
  * initial support for device specific settings
  * initial ImageMagick support 
  * initial ffmpeg support
  * initial XBox 360 support
    (Big thanks to Justin Maggard <jmaggard at users.sourceforge.net>)
  * win32 gui (more or less ;))
  * split up fuppes (command line) and fuppesd (daemon)

  * libiconv optional
  * fixed ip address detection
  * fixed crash if fuppes config is malformed
  * fixed urlencoded form value handling
  * fixed compilation error
	  (implemented detection of second iconv param)
  * HTTP client requests will no longer block	the main thread
  * fixed bug #1669624
	 (thanks to Jochen <jochen2 at users.sourceforge.net> and 
	 Justin Maggard <jmaggard at users.sourceforge.net>)
  * fixed extraction of folder name from shared directory
    when containing a trailing slash or backslash

  * win32 (updated sqlite from 3.3.7 to 3.3.13)

Version 0.7.1 (2007-02-03)
  * fixed bug #1650930 (win32)
  * Mac OS X fixes
  ** correct handling of socket option SO_NOSIGPIPE
  ** fixed send() error handling

Version 0.7 (2007-02-01)
  * initial UPnP eventing
    referring to the "Intel DeviceValidator" the eventing mechanism
    is now UPnP 1.0 compliant
  * initial taglib support (optional)  
  * initial TwoLAME support (choose encoder at build or runtime)
  * initial libnotify support (./configure --enable-libnotify)
  
  * new ./configure option --enable-default-http-port=PORT  

  * fixed FLAC transcoding on 64 bit machines
    (patch from Qball Cow. Big thanks!)
  * fixed crash on 64 bit machines caused by an
    unhandled out of range exception (Thanks again Qball)
  
  * syslog support (unix)
  ** daemon mode will allways use syslog
  ** use the parameter --syslog for the command line mode
  
  * fixed daemon mode (unix)
  ** config file is now checked before forking

  * code cleanup
  * new, easy to extend file extension to mime type mapping