@@ -51,6 +51,7 @@ class CVirtualContainerMgr
   
     void CreateSingleVFolder(CXMLNode* pFolderNode, std::string p_sDevice, unsigned int p_nParentId);
     void CreateVFoldersFromProperty(CXMLNode* pFoldersNode, std::string p_sDevice, unsigned int p_nParentId, std::string p_sFilter = "");
+    void CreateVFoldersSplit(CXMLNode* pFoldersNode, std::string p_sDevice, unsigned int p_nParentId, std::string p_sFilter = "");
     void CreateItemMappings(CXMLNode* pNode, std::string p_sDevice, unsigned int p_nParentId, std::string p_sFilter = "");
     void CreateFolderMappings(CXMLNode* pNode, std::string p_sDevice, unsigned int p_nParentId, std::string p_sFilter = "");
     void MapSharedDirsTo(CXMLNode* pNode, std::string p_sDevice, unsigned int p_nParentId);
